--- a/gb/14/10/27/n4281803.md
+++ b/gb/14/10/27/n4281803.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/myujtv3571/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>十大艾馨奖 医师老志工入列</h2>
 
 <h6></h6>
@@ -18,46 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/8/1/19/n1983217.md#1">出席艾馨奖颁奖  吕秀莲吁注意人口高龄化</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/8/8/21/n2236546.md#1">结合公益慈善 典美艺术周活动9月6日展开</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/2/8/n2813914.md#1">慈善协会爱心送餐 弱势族群欢喜过年</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/3/19/n3826033.md#1">公益慈善捐款 更少加人愿付出</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/3/29/n3834551.md#1">阳光公益慈善捐赠签约  幸福青年启航计划启航</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/14/7/16/n4201918.md#1">嘉市寺庙负责人齐聚 公益慈善及社会教化</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12732720.md#1">过年大扫除酸痛上身 对症下针能缓解</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12732568.md#1">重新启动自身免疫力 中医大发表抗癌新视角</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12732645.md#1">多吃蔬果健身 中医大研究：“单宁酸”可抗疫</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12730204.md#1">妇人头晕心悸就医 及时救一家四口命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/1/19/n1983217.md#1">出席艾馨奖颁奖  吕秀莲吁注意人口高龄化</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/8/21/n2236546.md#1">结合公益慈善 典美艺术周活动9月6日展开</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/2/8/n2813914.md#1">慈善协会爱心送餐 弱势族群欢喜过年</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/3/19/n3826033.md#1">公益慈善捐款 更少加人愿付出</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/3/29/n3834551.md#1">阳光公益慈善捐赠签约  幸福青年启航计划启航</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/7/16/n4201918.md#1">嘉市寺庙负责人齐聚 公益慈善及社会教化</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680620.md#1">台中YouBike2.0千站达标 最高周转率5在新光远百</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680380.md#1">科博馆鸟瞰剧场走入历史 告别演出4月登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679906.md#1">雾峰农会结合户政所 推出新生儿纪念酒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678509.md#1">中部美展首奖揭晓  19岁萧辅一版画作品《缄》</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513103.md#1" target="_blank">唐铭：维权老兵需了解韩战的中国战俘刺青浪潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234388.md#1" target="_blank">【征文】文宇：科举千年兴衰录（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623688.md#1" target="_blank">比利时母亲30年车祸创痛 读转法轮4个月消失</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/26/n12711986.md#1">预言试析：共产党亡于何时？</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/30/n12723183.md#1">【解密时分】懂得鸟语 历史上真有这样的人</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/12/29/n12651261.md#1">轮回转生 冤家变成母子</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/18/n12695507.md#1">【命理】被冤枉陷害的好人 皇天能不管吗？</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12731595.md#1">早上起床做1件事 远离过敏性鼻炎</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12731708.md#1">【珍言真语】反红媒渗透 郑敬基加国创港人电台</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12731260.md#1">【解密时分】24亿美元 史上十大最贵战机</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727425.md#1">接受发型师义剪 流浪汉秒变绅士男震惊网友</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726784.md#1">【秦鹏直播】缅军方抓昂山素季 急坏拜登习近平？</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728478.md#1">中共官媒群批“厕所革命”打了谁的脸？</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12729203.md#1">黎姿携三个女儿行山 粉丝意外聚焦一双波鞋</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726330.md#1">51岁周传雄登陆综 22岁孟美岐当导师引狂批</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12726845.md#1">金马影后马思纯疑患抑郁症 停工半年后首发声</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728875.md#1">获陈坤夸赞阳光又漂亮 杨颖默默点赞视频自励</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727150.md#1">立百病毒致死率高 专家示警下一场大流行威胁</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726617.md#1">这时喝水排毒快！早晚喝对水养生 还能控血糖</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727769.md#1">英军战机空袭伊拉克洞穴 准确歼灭IS成员</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12724829.md#1">乌克兰网红每天穿19世纪服装 如古典美人</a></li>
-<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727507.md#1">2021年2月是个完美矩形 会有大事发生吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/10/27/n4281803.htm">十大艾馨奖 医师老志工入列</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/10/27/n4281803.htm">十大艾馨奖 医师老志工入列</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/myujtv3571/djy/blob/master/gb/14/10/27/n4281803.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/14/10/27/n4281803.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
